--- a/app/src/main/res/layout/dialog_selection_product.xml
+++ b/app/src/main/res/layout/dialog_selection_product.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="5dp"
-        android:background="@drawable/sty_blue"
+        android:background="@drawable/dialog_background"
         android:visibility="visible">
 
         <!-- Calories Display Header -->
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="0dp"
             android:layout_marginHorizontal="3dp"
-            android:background="@drawable/sty_2">
+            android:background="@drawable/edit_text_background">
 
             <!-- Selected Product Name -->
             <TextView
@@ -89,7 +89,7 @@
                 android:layout_weight="1"
                 android:layout_marginHorizontal="3dp"
                 android:layout_gravity="center"
-                android:background="@drawable/sty_2"
+                android:background="@drawable/edit_text_background"
                 android:gravity="center"
                 android:text="מדד"
                 android:textColor="#000" />
@@ -110,7 +110,7 @@
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="3dp"
                 android:layout_weight="1"
-                android:background="@drawable/sty_2"
+                android:background="@drawable/edit_text_background"
                 android:gravity="center"
                 android:hint="כמות"
                 android:inputType="numberDecimal"
@@ -158,9 +158,9 @@
                 android:layout_height="45dp"
                 android:layout_alignParentRight="true"
                 android:layout_gravity="center"
-                android:background="@drawable/sty_w_r"
+                android:background="@drawable/rounded_btn_background"
                 android:text="הוסף"
-                android:textColor="@color/black" />
+                android:textColor="@color/primaryText" />
 
         </RelativeLayout>
 
