--- a/app/src/main/res/drawable/edit_text_background.xml
+++ b/app/src/main/res/drawable/edit_text_background.xml
@@ -4,7 +4,7 @@
 
  <stroke
     android:width="0.1dp"
-    android:color="#E8E8E8"/>
+    android:color="@color/tertiaryText"/>
     <corners
         android:radius="5dp" />
 
@@ -14,6 +14,6 @@
         android:top="5dp"
         android:bottom="5dp"/>
 
-    <solid android:color="#FFFFFF"/>
+    <solid android:color="@color/secondary"/>
 
 </shape>
