--- a/app/src/main/res/drawable/rounded_btn_background.xml
+++ b/app/src/main/res/drawable/rounded_btn_background.xml
@@ -4,7 +4,7 @@
 
  <stroke
     android:width="0.1dp"
-    android:color="#E8E8E8"/>
+    android:color="@color/dialogBorder"/>
     <corners
         android:radius="100dp" />
 
@@ -14,6 +14,6 @@
         android:top="1dp"
         android:bottom="1dp"/>
 
-    <solid android:color="#FFFFFF"/>
+    <solid android:color="@color/secondary"/>
 
 </shape>
