--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -7,7 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:ellipsize="marquee"
-    android:textColor="#050505"
+    android:textColor="@color/primaryText"
     android:textSize="18dp"
+    android:background="@color/secondary"
     android:textAlignment="inherit"/>
 
