--- a/app/src/main/res/drawable/sty_spinner_background.xml
+++ b/app/src/main/res/drawable/sty_spinner_background.xml
@@ -4,13 +4,13 @@
 
  <stroke
     android:width="0.1dp"
-    android:color="#E8E8E8"/>
+    android:color="@color/tertiaryText"/>
     <corners
         android:radius="5dp" />
 
     <padding
        />
 
-    <solid android:color="#FFFFFF"/>
+    <solid android:color="@color/secondary"/>
 
 </shape>
