--- a/app/src/main/res/drawable/circle_background_button.xml
+++ b/app/src/main/res/drawable/circle_background_button.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid
-        android:color="#FFFFFF"/>
+        android:color="@color/primary"/>
 
     <stroke
         android:width="0.1dp"
-        android:color="#E8E8E8"/>
+        android:color="@color/dialogBorder"/>
 </shape>
