--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -8,8 +8,8 @@
     <color name="secondary">#2A2A2A</color>
     <color name="tertiary">#015FE0</color>
 
-    <color name="dialogBackground">#0D0D0D</color>
-    <color name="dialogBorder">#2A2A2A</color>
+    <color name="dialogBackground">#2C2C2C</color>
+    <color name="dialogBorder">#545454</color>
 
     <color name="error">#FF0000</color>
     <color name="success">#00FF00</color>
