--- a/app/src/main/res/layout/consumed_item.xml
+++ b/app/src/main/res/layout/consumed_item.xml
@@ -9,8 +9,9 @@
     android:layout_marginStart="4dp"
     android:layout_marginEnd="4dp"
     android:id="@+id/main"
-    android:foreground="?attr/selectableItemBackground"
     android:clickable="true"
+    android:focusable="true"
+    android:foreground="?attr/selectableItemBackground"
     android:background="@drawable/list_item_background">
 
     <TextView
