--- a/app/src/main/res/drawable/edit_text_background.xml
+++ b/app/src/main/res/drawable/edit_text_background.xml
@@ -2,11 +2,7 @@
 
 <shape  xmlns:android="http://schemas.android.com/apk/res/android">
 
- <stroke
-    android:width="0.1dp"
-    android:color="@color/tertiaryText"/>
-    <corners
-        android:radius="5dp" />
+    <corners android:radius="15dp" />
 
     <padding
         android:left="2.5dp"
@@ -14,6 +10,6 @@
         android:top="5dp"
         android:bottom="5dp"/>
 
-    <solid android:color="@color/secondary"/>
+    <solid android:color="@color/primary"/>
 
 </shape>
