--- a/app/src/main/res/drawable/rounded_btn_background.xml
+++ b/app/src/main/res/drawable/rounded_btn_background.xml
@@ -14,6 +14,6 @@
         android:top="1dp"
         android:bottom="1dp"/>
 
-    <solid android:color="@color/secondary"/>
+    <solid android:color="@color/primary"/>
 
 </shape>
