--- a/app/src/main/res/drawable/sty_2_half.xml
+++ b/app/src/main/res/drawable/sty_2_half.xml
@@ -2,9 +2,6 @@
 
 <shape  xmlns:android="http://schemas.android.com/apk/res/android">
 
- <stroke
-    android:width="0.0dp"
-    android:color="#E8E8E8"/>
     <corners
         android:bottomLeftRadius="-100dp"
         android:bottomRightRadius="-100dp"
@@ -14,6 +11,6 @@
     <padding
       />
 
-    <solid android:color="#FFFFFF"/>
+    <solid android:color="@color/primary"/>
 
 </shape>
