--- a/app/src/main/res/layout/activity_product_creation.xml
+++ b/app/src/main/res/layout/activity_product_creation.xml
@@ -16,10 +16,10 @@
         android:background="@color/primary">
 
         <TextView
-            app:drawableStartCompat="@drawable/ic_baseline_search"
+            app:drawableEndCompat="@drawable/ic_baseline_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="חיפוש עצמי"
+            android:text="@string/self_search"
             android:textSize="25sp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
