--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primaryText">#F8F8F8</color>
+    <color name="primaryText">#F4F4F4</color>
     <color name="secondaryText">#ADADAD</color>
     <color name="tertiaryText">#7E7E7E</color>
 
     <color name="primary">#000000</color>
-    <color name="secondary">#2A2A2A</color>
+    <color name="secondary">#161616</color>
+<!--    2A2A2A   262626-->
     <color name="tertiary">#015FE0</color>
 
     <color name="dialogBackground">#2C2C2C</color>
