--- a/app/src/main/res/layout/dialog_editing_product_consumed.xml
+++ b/app/src/main/res/layout/dialog_editing_product_consumed.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
@@ -13,8 +14,8 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/dialog_background"
-        >
+        android:background="@drawable/dialog_background">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -23,19 +24,30 @@
             android:textColor="@color/primaryText"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:layout_marginBottom="15dp"
             />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/dialogBorder"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="15dp"/>
+
         <TextView
             android:id="@+id/consumedProductNameTv"
-            android:text="@string/product"
+            android:text="@string/ex_product_name"
             android:layout_width="match_parent"
-            android:layout_height="32dp"
+            android:layout_height="wrap_content"
+            android:drawablePadding="5dp"
+            android:minHeight="32dp"
             android:layout_marginTop="0dp"
             android:layout_marginHorizontal="8dp"
             android:ems="10"
-            android:gravity="start"
+            android:gravity="start|center_vertical"
             android:textSize="16sp"
             android:textColor="@color/primaryText"
+            app:drawableStartCompat="@drawable/ic_baseline_circle"
+            app:drawableTint="@color/primaryText"
             />
         <LinearLayout
             android:layout_width="match_parent"
@@ -67,7 +79,7 @@
 
             <EditText
                 android:autofillHints="1"
-                android:text="@string/one"
+                android:text="@string/_1"
                 android:id="@+id/consumedProductNewAmountTv"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
@@ -78,7 +90,7 @@
                 android:textColorHint="@color/tertiaryText"
                 android:textColor="@color/primaryText"
                 android:layout_gravity="center"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:maxLines="1"
                 android:hint="@string/amount"
                 android:inputType="numberDecimal"
