--- a/app/src/main/res/layout/activity_product_creation.xml
+++ b/app/src/main/res/layout/activity_product_creation.xml
@@ -29,8 +29,8 @@
 
         <ImageButton
             android:id="@+id/backBtn"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:background="?attr/selectableItemBackgroundBorderless"
@@ -46,12 +46,16 @@
         android:layout_height="match_parent"
         android:background="@android:color/transparent"
         android:layout_below="@id/topBar">
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
         <WebView
         android:id="@+id/webview"
         android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+    </RelativeLayout>
 
         <ScrollView
             android:layout_width="match_parent"
@@ -70,8 +74,8 @@
                 <!-- כפתור לפתיחת כרטיסיית חיפוש עצמי (כתום) -->
                 <ImageView
                     android:id="@+id/showDialogSheet"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_margin="8dp"
                     android:layout_marginHorizontal="10dp"
                     android:layout_gravity="end"
