style: Apply custom style to SeekBar
This commit updates the `SeekBar` in the product creation activity layout.

The `progressDrawable` and `thumb` attributes have been set to use `@drawable/custom_seekbar` and `@drawable/custom_thumb` respectively, applying a custom visual style to the seek bar.

--- a/app/src/main/res/layout/activity_product_creation.xml
+++ b/app/src/main/res/layout/activity_product_creation.xml
@@ -94,6 +94,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:max="255"
-            android:progress="122" />
+            android:progress="122"
+            android:progressDrawable="@drawable/custom_seekbar"
+            android:thumb="@drawable/custom_thumb"/>
     </RelativeLayout>
 </RelativeLayout>
