style: Adjust vertical margin for brightness SeekBar
This commit updates the `brightnessSeekBar` in `activity_product_creation.xml` by reducing its vertical margin from `10dp` to `8dp`.

--- a/app/src/main/res/layout/activity_product_creation.xml
+++ b/app/src/main/res/layout/activity_product_creation.xml
@@ -90,12 +90,13 @@
 
         <SeekBar
             android:id="@+id/brightnessSeekBar"
-            android:layout_marginVertical="10dp"
+            android:layout_marginVertical="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:max="255"
             android:progress="122"
             android:progressDrawable="@drawable/custom_seekbar"
-            android:thumb="@drawable/custom_thumb"/>
+            android:thumb="@drawable/custom_thumb"
+            />
     </RelativeLayout>
 </RelativeLayout>
