--- a/app/src/main/res/drawable/custom_seekbar.xml
+++ b/app/src/main/res/drawable/custom_seekbar.xml
@@ -1,15 +1,16 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@android:id/background">
         <shape>
-            <corners android:radius="5dp"/>
-            <solid android:color="#CCCCCC"/>
+            <corners android:radius="10dp"/>
+            <solid android:color="@color/selfSearch"/>
         </shape>
     </item>
+
     <item android:id="@android:id/progress">
         <clip>
             <shape>
-                <corners android:radius="5dp"/>
-                <solid android:color="#FF9800"/> <!-- צבע כתום -->
+                <corners android:radius="10dp"/>
+                <solid android:color="#CCCCCC"/>
             </shape>
         </clip>
     </item>
