--- a/app/src/main/res/layout/activity_product_creation.xml
+++ b/app/src/main/res/layout/activity_product_creation.xml
@@ -60,14 +60,15 @@
         </RelativeLayout>
 
         <ScrollView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:background="@android:color/transparent"
+            android:layout_alignParentEnd="true"
             android:windowSoftInputMode="adjustResize">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:background="@android:color/transparent"
