--- a/app/src/main/res/layout/activity_product_creation.xml
+++ b/app/src/main/res/layout/activity_product_creation.xml
@@ -36,7 +36,7 @@
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/back"
             android:padding="8dp"
-            android:src="@drawable/round_arrow_back_24"
+            android:src="@drawable/round_arrow_back"
             />
     </RelativeLayout>
 
@@ -82,7 +82,7 @@
                     android:layout_margin="8dp"
                     android:layout_marginHorizontal="10dp"
                     android:layout_gravity="end"
-                    android:background="@drawable/circle_orang"
+                    android:background="@drawable/circle_orang_background"
                     android:contentDescription="@string/show_add_product_dialog"
                     android:src="@drawable/baseline_arrow_drop_up_white"
                     android:visibility="visible" />
