--- a/app/src/main/res/layout/bottom_menu.xml
+++ b/app/src/main/res/layout/bottom_menu.xml
@@ -1,5 +1,6 @@
 <!-- bottom_menu.xml -->
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/bottomActionMenu"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -7,17 +8,22 @@
     android:background="@android:color/transparent"
     android:windowSoftInputMode="adjustResize">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:paddingTop="8dp">
+
+        <RelativeLayout
+            android:id="@+id/searchRl"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toStartOf="@+id/btnContainer">
+
 
         <android.widget.SearchView
             android:id="@+id/mainSearchView"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_weight="1"
             android:layout_marginHorizontal="16dp"
             android:layout_marginBottom="12dp"
             android:elevation="4dp"
@@ -27,25 +33,29 @@
             android:textColor="@color/primaryText"
             android:textSize="16sp"
             android:contextClickable="true"
-            android:queryHint="הקלד מוצר" />
+            android:queryHint="@string/type_product" />
+        <ImageButton
+            android:id="@+id/barcodeIcon"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:elevation="5dp"
+            android:background="@android:color/transparent"
+            android:contentDescription="@string/scan_barcode"
+            android:src="@drawable/outline_barcode_scanner"
+            app:tint="@color/primaryText"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="15dp"
+            />
+        </RelativeLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:id="@+id/btnContainer"
+            android:layout_alignParentEnd="true"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:layout_marginBottom="12dp"
-            android:layout_weight="6.0">
 
-            <ImageView
-                android:id="@+id/barcodeIcon"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_gravity="center"
-                android:contentDescription="@string/scan_barcode"
-                android:padding="9dp"
-                android:background="@drawable/circle_blue_background"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_baseline_qr_code_2_24_white" />
+            android:gravity="center"
+            android:layout_marginBottom="12dp">
 
             <ImageView
                 android:id="@+id/iv_selfAdd"
@@ -54,7 +64,8 @@
                 android:layout_gravity="center"
                 android:contentDescription="@string/add_self_calorie_value"
                 android:padding="9dp"
-                android:background="@drawable/circle_purple_background"
+                android:background="@drawable/circle_background_button"
+                android:backgroundTint="@color/purple"
                 android:scaleType="fitCenter"
                 android:src="@drawable/baseline_add_white"
                 android:visibility="gone" />
@@ -66,10 +77,11 @@
                 android:layout_gravity="center"
                 android:contentDescription="@string/move_to_custom_product_view"
                 android:padding="9dp"
-                android:background="@drawable/circle_orang_background"
+                android:background="@drawable/circle_background_button"
+                android:backgroundTint="@color/selfSearch"
                 android:scaleType="fitCenter"
                 android:src="@drawable/ic_baseline_search"
                 android:visibility="gone" />
         </LinearLayout>
-    </LinearLayout>
+    </RelativeLayout>
 </ScrollView>
