--- a/app/src/main/res/layout/activity_my_prodact.xml
+++ b/app/src/main/res/layout/activity_my_prodact.xml
@@ -11,12 +11,10 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/productsRecyclerView"
         android:background="@android:color/transparent"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:scrollbars="vertical"
         android:scrollbarSize="5dp"
-        android:clipToPadding="false"
-        android:paddingBottom="140dp"
         android:transcriptMode="alwaysScroll"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
