--- a/app/src/main/res/layout/dialog_editing_product_consumed.xml
+++ b/app/src/main/res/layout/dialog_editing_product_consumed.xml
@@ -19,7 +19,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/edit_product"
+            android:text="@string/edit_amount"
             android:layout_gravity="center"
             android:textColor="@color/primaryText"
             android:textSize="20sp"
