feat: Adjust night theme colors
This commit updates the color values for `selfSearch` and `delete` in the night theme. It also removes the unused `sideItem` color resource.

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -16,9 +16,8 @@
     <color name="error">#FF0000</color>
     <color name="success">#00FF00</color>
 
-    <color name="selfSearch">#E6FFA63A</color>
-    <color name="delete">#FF6262</color>
-    <color name="sideItem">#FF6262</color>
+    <color name="selfSearch">#E68E5C1F</color>
+    <color name="delete">#350000</color>
 
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
