--- a/app/src/main/res/drawable/product_item_background_custom.xml
+++ b/app/src/main/res/drawable/product_item_background_custom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFFFFF" />
+    <solid android:color="@color/secondary" />
     <corners android:radius="12dp" />
     <stroke
-        android:width="0.5dp"
-        android:color="#036CF6" />
+        android:width="1dp"
+        android:color="@color/tertiary" />
 </shape>
