refactor: Use color resource for `sty_orang3.xml` background
This commit updates the `sty_orang3.xml` drawable to use the `@color/selfSearch` color resource instead of a hardcoded hex value for its background.

--- a/app/src/main/res/drawable/sty_orang3.xml
+++ b/app/src/main/res/drawable/sty_orang3.xml
@@ -14,6 +14,6 @@
         android:top="3dp"
         android:bottom="3dp"/>
 
-    <solid android:color="#FFAA00"/>
+    <solid android:color="@color/selfSearch"/>
 
 </shape>
