--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -159,7 +159,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="Wed 19"
+                            android:text="@string/today"
                             android:textSize="16sp"
                             android:textColor="#FFFFFF"
                             android:foreground="?attr/selectableItemBackground"
