--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,11 +13,13 @@
     <color name="searchBarBackground">#FBFBFB</color> <!--F1F1F1-->
     <color name="searchBarBorder">#E0E0E0</color> <!--F1F1F1-->
 
-    <color name="error">#FF0000</color>
-    <color name="success">#00FF00</color>
-
     <color name="selfSearch">#E6FFA63A</color>
     <color name="delete">#FF6262</color>
+
+    <color name="favorite">#FFC107</color>
+
+    <color name="error">#FF0000</color>
+    <color name="success">#00FF00</color>
 
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
